@@ -4,6 +4,7 @@ Revision history for Perl extension {{$dist->name}}
 
   [Enhancements]
   - Improve escaping of markdown characters.
+  - Represent over/back regions without items as blockquotes.
 
   [Backward Incompatible Changes]
   - E<> codes used to produce equivalent html entities (&foo;).
